# bullshido-api

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  config.py  db.py  main.py  models.py  pyproject.toml  readme.md  schemas.py  security.py
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0060aecea436_change_created_at_to_timestamp_with_.py  8513b6e9838e_link_user_and_video_by_id.py  8b6083d92c03_update_voice_enum_values.py  fd3f0c6daf9d_init_db.py
docker/: .env.example  Makefile  docker-compose.yaml
routers/: auth.py  users.py  videos.py
services/: auth_service.py  users_service.py  videos_service.py
tests/: conftest.py  smoke_test.py  test_auth_service.py  test_e2e.py  test_users_service.py  test_videos_integration.py  test_videos_service.py
