# pyproject.toml

[project]
name = "bullshido-api"
version = "0.1.0"
description = "Bullshido API backend."
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "fastapi",
    "python-jose",
    "passlib",
    "python-multipart",
    "uvicorn",
    "pydantic[email]",
    "pydantic-settings",
    "alembic",
    "arq",
    "asyncpg",
    "redis",
    "sqlalchemy",
    "sqlmodel"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest-asyncio",
    "pytest",
    "pytest-sugar",
    "aiosqlite",
    "mutmut",
    "commitizen"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=tests/test_e2e.py --ignore=tests/test_videos_integration.py"

[tool.mutmut]
paths_to_mutate = ["services/", "security.py", "models.py", "schemas.py", "config.py", "db.py"]
runner = "python -m pytest -x"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [
    "tests*",
    "docker*",
    "alembic*",
    "nginx*",
    "k8s*",
    "scripts*",
    ".github*",
    "pgdata*",
    "redisdata*",
    "minio_data*"
]

[tool.commitizen]
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true